# chess-up

./: Bishop_8hpp_source.html  Board.hpp  Board_8hpp_source.html  CApp.cpp  CApp.hpp  CApp_8hpp_source.html  CMakeLists.txt  King_8hpp_source.html  Knight_8hpp_source.html  Makefile  Pawn.cpp  Pawn.hpp  Pawn_8hpp_source.html  Piece.cpp  Piece.hpp  Piece_8hpp_source.html  Queen_8hpp_source.html  README.md  Rook_8hpp_source.html  SimpleSpmv_8hpp_source.html  annotated.html  classBishop-members.html  classBishop.html  classBoard-members.html  classBoard.html  classCApp-members.html  classCApp.html  classCsrDecoder-members.html  classKing-members.html  classKing.html  classKnight-members.html  classKnight.html  classParallelCsrReadControl-members.html  classPawn-members.html  classPawn.html  classPiece-members.html  classPiece.html  classQueen-members.html  classQueen.html  classRook-members.html  (+20 more)
docs/: doxygen.conf
html/: Bishop_8hpp_source.html  Board_8hpp_source.html  CApp_8hpp_source.html  King_8hpp_source.html  Knight_8hpp_source.html  Model_8hpp_source.html  Pawn_8hpp_source.html  Piece_8hpp_source.html  Queen_8hpp_source.html  Rook_8hpp_source.html  SparseLinearSolvers_8hpp_source.html  annotated.html  classBishop-members.html  classBishop.html  classBoard-members.html  classBoard.html  classCApp-members.html  classCApp.html  classKing-members.html  classKing.html  classKnight-members.html  classKnight.html  classParallelCsrReadControl.html  classPawn-members.html  classPawn.html  classPiece-members.html  classPiece.html  classQueen-members.html  classQueen.html  (+29 more)
(+124 files in other folders)
